Shallow water: - added more boundary conditions for inflow-boundaries - implemented cylinder-test case following Zhou2001
Writers:
- added LineProbe writer to monitor simulation results along a cut line
- further writers have to be adjusted/implemented (x3d, paraview, ...)
- write interval == update interval, so far...

--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
 <project name="FlowSim_(iRMB_Version)" default="default" basedir=".">
     <description>Builds, tests, and runs the project FlowSim (iRMB Version).</description>
     <import file="nbproject/build-impl.xml"/>
+    <import file="nbproject/profiler-build-impl.xml"/>
     <!--
 
     There exist several targets which are by default empty and which can be 
